UI: fix alignment issue on desktop layout

--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -14,6 +14,7 @@ main {
   align-items: center;
 }
 
+.card p { color: var(--ui-fade-font-color); }
 .card a, .card p {  font-size: 1.25rem; }
 
 .card > section {
@@ -53,6 +54,7 @@ main {
       grid-column-gap: initial;
       grid-template-rows: min-content 1fr;
       grid-row-gap: 0.75rem;
+      align-items: initial;
     }
 
     .card a, .card p { font-size: 1rem; }
